--- a/client/src/components/search-box/search-box.scss
+++ b/client/src/components/search-box/search-box.scss
@@ -2,52 +2,15 @@
 
 .searchbox {
 	display: flex;
-	height: 65px;
+	height: 40px;
+	margin: 10px 0;
 	justify-content: center;
 	width: 100%;
 
-	.form-container {
+	.search-input {
 		width: 100%;
-
-		.search-form {
-			position: relative;
-
-			.search-input {
-				width: 100%;
-			}
-
-			.form-control {
-				font-size: 18px;
-				height: 40px;
-				width: 100%;
-				color: $color-gray-1;
-				padding: 5px;
-				-webkit-border-radius: 2px;
-				border-radius: 2px;
-				background-color: #fff;
-				border: 0 rgba(0, 0, 0, 0.2);
-
-				&:focus {
-					outline: none !important;
-					border: 0 rgba(0, 0, 0, 0.2);
-					box-shadow: 0 0 2px 2px rgba(90, 89, 89, 0.3);
-				}
-			}
-
-			.search-btn {
-				position: absolute;
-				right: 8px;
-				top: 8px;
-				width: 35px;
-				height: 25px;
-				cursor: pointer;
-				border: 0;
-				background-image: url("../../../images/search.png");
-				background-position: right;
-				background-repeat: no-repeat;
-				border-left: 1px solid $color-gray-5;
-				padding-left: 10px;
-			}
+		input[type=text] {
+			width: 100%;
 		}
 	}
 }
